syntax = "proto3";

package protocol;

message IntArray {
    repeated uint32 elements = 1;
}

message Structure {
    map<uint32, IntArray> edges = 1;
}